--- a/static/index.css
+++ b/static/index.css
@@ -1,6 +1,78 @@
+.header {
+  background-color: #3cb4ff;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto 350px;
+      grid-template-columns: auto 350px;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+  grid-gap: 8px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  top: 0;
+  left: 0;
+  font-family: "Verdana", "Arial", "sans-serif";
+  color: black;
+}
+
+.logo {
+  padding-left: 1em;
+  display: block;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+}
+
+.links {
+  background-color: #3cb4ff;
+  border-left: 2px solid grey;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  display: -ms-grid;
+  display: grid;
+  margin: 0;
+  -ms-grid-columns: auto;
+      grid-template-columns: auto;
+  text-align: center;
+  padding: 1em;
+}
+
+.links a:link, a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+.links a:hover {
+  background-color: grey;
+  color: rgba(210, 210, 210, 0.3);
+}
+
+.link1 {
+  display: inline;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+}
+
+.link2 {
+  display: inline;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+}
+
+.link3 {
+  display: inline;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+}
+
 body {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(210, 210, 210, 0.3)), to(white));
-  background: linear-gradient(rgba(210, 210, 210, 0.3), white);
+  background: -webkit-gradient(linear, left top, left bottom, from(#3cb4ff), to(grey));
+  background: linear-gradient(#3cb4ff, grey);
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
@@ -16,7 +88,7 @@ body {
   margin-top: 1em;
   margin-left: auto;
   margin-right: auto;
-  border: 2px solid grey;
+  border-left: 2px solid grey;
 }
 
 .body {
@@ -26,15 +98,15 @@ body {
 }
 
 .gridContainer {
-  background-color: #c8c8c8;
+  background-color: rgba(200, 200, 200, 0.5);
   border-left: 2px solid grey;
   width: 216px;
   margin-left: auto;
   margin-right: auto;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: auto auto auto;
-      grid-template-columns: auto auto auto;
+  -ms-grid-columns: auto;
+      grid-template-columns: auto;
   grid-gap: 1em;
   padding: 1em;
   text-align: center;
@@ -56,5 +128,13 @@ body {
   grid-column: 2/3;
   width: 100px;
   margin: auto;
+}
+
+.text {
+  text-align: center;
+  padding: 1em;
+  color: black;
+  font-family: "Verdana", "Arial", "sans-serif";
+  font-size: 110%;
 }
 /*# sourceMappingURL=index.css.map */
