--- a/static/index.sass
+++ b/static/index.sass
@@ -124,11 +124,5 @@ body
     border-left: $grey solid 2px
     padding-left: 1em
 
-.projectWhiskey
-    @include project
-
-.projectGame
-    @include project
-
-.SPCCeportfolio
+.projectItem
     @include project
